--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,10 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports:
+    data.table,
+    ggplot2,
+    magrittr,
+    plotly
 Suggests: 
     learnr
